fix: update dashboard for dark mode

--- a/src/assets/styles/_common.scss
+++ b/src/assets/styles/_common.scss
@@ -44,7 +44,6 @@ p {
 }
 
 footer {
-  margin-top: 8px;
   display: flex;
   align-items: center;
   line-height: 20px;
